--- a/desc.html
+++ b/desc.html
@@ -15,7 +15,7 @@
           <a class="navbar-brand col-4" href="index.html">
             <img src="./src/img/logo.png" alt="logo">
           </a>
-          <div class="collapse navbar-collapse justify-content-between" id="navbarScroll">
+          <div class="navbar-collapse justify-content-between" id="navbarScroll">
             <ul class="navbar-nav  gap-3 my-2 my-lg-0 navbar-nav-scroll">
               <li class="nav-item">
                 <a class="nav-link " href="index.html">Home</a>
